# AutoUnzip

./: .gitignore  AGENTS.md  README.md  build-exe.ps1  pyproject.toml
.github/workflows/: release.yml
scripts/: build.ps1  fetch_7zip.py  generate_icon.py  generate_release_notes.ps1
src/: launcher.py
src/autounzip/: __init__.py  archive_detection.py  elevation.py  engine.py  main.py  models.py  settings.py  vendor.py  worker.py
src/autounzip/ui/: __init__.py  dialogs.py  main_window.py  styles.py  widgets.py
