[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autounzip"
version = "0.1.0"
description = "Windows desktop tool for recursively extracting disguised archives with an embedded 7-Zip runtime."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "PySide6==6.11.0",
]

[project.optional-dependencies]
build = [
  "PyInstaller==6.19.0",
]

[project.scripts]
autounzip = "autounzip.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
